[project]
name = "chemotensor"
version = "0.1.0"
description = "Aplikacja do chemometrycznej analizy tensorów widmowych (PCA, MCR, PARAFAC, 2D-COS)."
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "pymcr==0.5.1",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "tensorly",
    "openpyxl",
    "scipy-stubs==1.16.3.0",
    "pandas-stubs==2.3.2.250926",
    "umap-learn"
]
